--- a/css/main.css
+++ b/css/main.css
@@ -1,1 +1,11 @@
-/* Place CSS styles here */
+.header {
+    padding: 15px;
+    text-align: left;
+    background:whitesmoke;
+    color: #1abc9c;
+    font-size: 15px;
+  }
+  .topnav {
+    overflow: hidden;
+    background-color: #e9e9e9;
+  }
