--- a/css/main.css
+++ b/css/main.css
@@ -5,7 +5,35 @@
     color: #1abc9c;
     font-size: 15px;
   }
+  .welcome {
+    text-align: center;
+  }
   .topnav {
     overflow: hidden;
-    background-color: #e9e9e9;
+    background-color: #93e4d4;
+  }
+  .topnav a {
+    float: left;
+    display: block;
+    color: black;
+    text-align: center;
+    padding: 14px 16px;
+    text-decoration: none;
+    font-size: 17px;
+  }
+  .topnav a:hover {
+    background-color: #ddd;
+    color: black;
+  }
+  .topnav a.active {
+    background-color: #1abc9c;
+    color: white;
+  }
+  .topnav input[type=text] {
+    float: right;
+    padding: 6px;
+    border: none;
+    margin-top: 8px;
+    margin-right: 16px;
+    font-size: 17px;
   }
