--- a/css/main.css
+++ b/css/main.css
@@ -7,6 +7,12 @@
   }
   .welcome {
     text-align: center;
+    font-size: 20px;
+    padding-top: 10px;
+  }
+  .discover {
+    text-align: center;
+    font-size: 20px;
   }
   .topnav {
     overflow: hidden;
@@ -36,4 +42,19 @@
     margin-top: 8px;
     margin-right: 16px;
     font-size: 17px;
+  }
+  .Mission {
+    text-align: center;
+    padding: 15px;
+
+  }
+  .explore {
+    text-align: center;
+  }
+  .benefit {
+    text-align: center;
+    color:#1abc9c;
+  }
+  .benefittxt {
+    text-align: center;
   }
