--- a/css/main.css
+++ b/css/main.css
@@ -5,6 +5,23 @@
     color: #1abc9c;
     font-size: 15px;
   }
+    img .hero-image {
+        position: relative;
+}
+
+  
+.hero-text {
+    font-size: 45px;
+    text-align: center;
+    position: relative;
+    top: -100px;
+    left: 800px;
+    transform: translate(-50%, -50%);
+    color: rgb(244, 242, 242);
+  }
+ 
+
+
   .welcome {
     text-align: center;
     font-size: 20px;
